@@ -60,6 +60,8 @@ KEPCHUP_CHILDREN_MANDATORY_FIELDS = [
     "sex",
 ]
 KEPCHUP_CHILDREN_HIDDEN_FIELDS = ["language", "nationality"]
+KEPCHUP_EMERGENCY_NUMBER_ON_PARENT = True
+
 KEPCHUP_EXPLICIT_SESSION_DATES = True
 SCHOOL_YEAR_EDITABLE = False
 KEPCHUP_DISPLAY_LAGAPEO = True
