@@ -61,6 +61,7 @@ KEPCHUP_REGISTER_ACCOUNTS_AT_ANY_TIME = True
 KEPCHUP_NO_TERMS = False
 KEPCHUP_CHILD_SCHOOL = False
 KEPCHUP_FICHE_SALAIRE_MONTREUX = True
+KEPCHUP_EMERGENCY_NUMBER_ON_PARENT = True
 KEPCHUP_NO_SSF = True
 KEPCHUP_ADDITIONAL_INSTRUCTOR_EMAIL_DOCUMENTS = [
     "pdf/infos-moniteurs-2024.pdf",
