@@ -54,6 +54,7 @@ KEPCHUP_NO_PAYMENT = False
 KEPCHUP_USE_DIFFERENTIATED_PRICES = True
 KEPCHUP_PAYMENT_METHOD = "postfinance"
 KEPCHUP_ALTERNATIVE_PAYMENT_METHODS_FROM_BACKEND = ["external"]
+KEPCHUP_EMERGENCY_NUMBER_ON_PARENT = True
 
 KEPCHUP_NO_TERMS = False
 KEPCHUP_CHILD_SCHOOL = True
