@@ -5,6 +5,11 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [Unreleased]
+### Fixed
+- Emergency numbers exports when associated to parent.
+
+
 ## 4.0.5 - 2025-05-05
 ### Fixed
 - Navigation issue in wizard
